[Agenda] - Fix incorrect datetime model after close form on edit mode and save event - Fix error messages still shown after save event - Fix days bg color on dark mode

--- a/app/ui-src/src/css/app.scss
+++ b/app/ui-src/src/css/app.scss
@@ -1,4 +1,9 @@
 // app global css in SCSS form
+
+.fc .fc-scrollgrid-section-sticky > * {
+  background: var(--fc-page-bg-color) !important
+}
+
 .bg-login {
   height: calc(100vh + 5px);
   overflow: hidden;
